# RTEP

./: README.md
Hardware/: README.md
Hardware/MPU 6050/: DESIGN1.DRC  DESIGN1.DSN  DESIGN1_0.DBK  design1.opj
Hardware/MPU 6050/Allegro/: 0603design5.SAV  0603design5.brd.lck  0603design5brd.brd  allegro.jrl  allegro.jrl,1  batch_drc.log,1  batch_drc.log,2  batch_drc.log,3  eco.txt  eco.txt,1  last_import_time.txt  master.tag  netrev.lst  pstchip.dat,1  pstchip.dat,2  pstchip.dat,3  pstxnet.dat,1  pstxnet.dat,2  pstxnet.dat,3  pstxprt.dat,1  pstxprt.dat,2  pstxprt.dat,3  window_drc.log,1  window_drc.log,2
Hardware/mainboard/: TCA9548APWR.DSN  TCA9548APWR.opj  TCA9548APWR_0.DBK  allegro.jrl
Hardware/mainboard/allegro/: allegro.jrl  allegro.jrl,1  batch_drc.log,1  batch_drc.log,2  batch_drc.log,3  board1.brd  board1.brd.lck  eco.txt  eco.txt,1  last_import_time.txt  master.tag  mk1.brd  netrev.lst  pstchip.dat,1  pstchip.dat,2  pstchip.dat,3  pstxnet.dat,1  pstxnet.dat,2  pstxnet.dat,3  pstxprt.dat,1  pstxprt.dat,2  pstxprt.dat,3
Software/ExerciseTests/: ExerciseTests.cpp  ExerciseTests.h  Exerciseprogram  main.cpp  makefile
Software/MPU6050/: CMakeCache.txt  CMakeLists.txt  MPU6050.cpp  MPU6050.h  MPU6050Register.h  Makefile  cmake_install.cmake  libMPU6050.so.1
Software/MPU6050/Example/: CMakeLists.txt  Demo  Demo.cpp  Makefile  cmake_install.cmake
YAGP_GUI/: YAGP_GUI.pro  linux-timer-demo.cpp  main.cpp  mainwindow.cpp  mainwindow.h
build-YAGP_GUI-Desktop_x86_windows_msvc2017_pe_32bit-Debug/: Makefile  moc_mainwindow.cpp
(+17 files in other folders)
